[tool.poetry]
name = "marclab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.4"
django-s3-file-field-client = "^0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}
flake8-black = "^0.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
